--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.NoteT3H" parent="Base.Theme.NoteT3H" />
+
+    <style name="ViewBackground">
+        <item name="android:elevation">1dp</item>
+        <item name="android:background">@drawable/shape_while_bg</item>
+    </style>
 </resources>
