--- a/app/src/main/res/drawable/shape_bg_bottom.xml
+++ b/app/src/main/res/drawable/shape_bg_bottom.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#F9F9F9"/>
+    <corners android:topLeftRadius="30dp"
+        android:topRightRadius="30dp"/>
+
+
+</shape>
