--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -6,35 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".Create_Note">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCreate1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:drawableStart="@drawable/baseline_arrow_back_ios_24"
+        android:drawablePadding="10dp"
+        android:fontFamily="@font/nunito_sans_regular"
         android:text="Back"
-        android:textSize="15dp"
-        android:textColor="@color/blue"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="#1F2124"
-        app:cardCornerRadius="12dp">
+        android:textColor="#007AFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:textSize="@dimen/TextSize"
-            android:backgroundTint="#1F2124"/>
-    </androidx.cardview.widget.CardView>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/nunito_sans_regular"
+        android:text="Save"
+        android:gravity="center"
+        android:padding="6dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:background="@drawable/shape_save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvCreate2"
@@ -43,6 +43,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Page Title"
+        android:fontFamily="@font/nunito_sans_regular"
         android:textSize="@dimen/TextTile"
         android:textStyle="bold"
         android:layout_marginTop="120dp"
@@ -71,7 +72,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
